[tool.poetry]
name = "hex-todo"
version = "0.1.0"
description = ""
authors = ["Wellington Lorenço <wlsouza@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
